// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Menu/> > should not render links 1`] = `
.c4 {
  color: #0A1128;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c1 {
  position: fixed;
  z-index: 5;
  top: 0;
  left: 0;
  right: 0;
  transition: all 300ms ease-in-out;
  background: #FFFFFF;
  border: 0.1rem solid #DDDDDD;
}

.c1 >.sc-bdnyFh {
  padding-top: 0;
  padding-bottom: 0;
}

.c1 .c3 {
  margin-top: 0;
  margin-bottom: 0;
}

.c2 {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.c0 {
  z-index: 6;
  position: fixed;
  top: 2rem;
  right: 3rem;
  background: #0A1128;
  color: #FFFFFF;
  border: none;
  display: none;
  pointer-events: all;
}

.c0 >svg {
  cursor: pointer;
  padding-top: 2px;
  padding-left: 6px;
  padding-right: 6px;
}

.c5 {
  color: inherit;
  display: flex;
  text-decoration: none;
  align-items: center;
  padding: 1rem;
}

.c5 >img {
  max-height: 2.5rem;
}

.c6 {
  color: #FFFFFF;
  display: flex;
  flex-flow: row wrap;
}

@media (max-width:768px) {
  .c1 {
    height: 100vh;
    visibility: hidden;
    opacity: 0;
  }

  .c1 >.sc-bdnyFh {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
  }

  .c1 .c3 {
    padding-bottom: 3.2rem;
    display: flex;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c2 {
    flex-flow: column nowrap;
    justify-content: flex-start;
    align-items: center;
    text-align: center;
    min-height: 100vh;
    height: 100%;
    overflow-y: auto;
    padding: 4.8rem 0;
    cursor: pointer;
  }
}

@media (max-width:768px) {
  .c0 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c6 {
    flex-flow: column wrap;
    align-content: center;
  }
}

<div>
  <button
    aria-label="Open/close menu"
    class="c0"
  >
    <svg
      aria-label="Open menu"
      class="lucide lucide-menu"
      fill="none"
      height="32"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="4"
        x2="20"
        y1="12"
        y2="12"
      />
      <line
        x1="4"
        x2="20"
        y1="6"
        y2="6"
      />
      <line
        x1="4"
        x2="20"
        y1="18"
        y2="18"
      />
    </svg>
  </button>
  <div
    aria-label="wrap"
    class="c1"
  >
    <div
      class="c2"
    >
      <h1
        class="c3 c4"
      >
        <a
          class="c5"
          href="#target"
        >
          Logo
        </a>
      </h1>
      <nav
        aria-label="Main menu"
        class="c6"
      />
    </div>
  </div>
</div>
`;

exports[`<Menu/> > should render Logo and Main menu Nav 1`] = `
.c4 {
  color: #0A1128;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c1 {
  position: fixed;
  z-index: 5;
  top: 0;
  left: 0;
  right: 0;
  transition: all 300ms ease-in-out;
  background: #FFFFFF;
  border: 0.1rem solid #DDDDDD;
}

.c1 >.sc-bdnyFh {
  padding-top: 0;
  padding-bottom: 0;
}

.c1 .c3 {
  margin-top: 0;
  margin-bottom: 0;
}

.c2 {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.c0 {
  z-index: 6;
  position: fixed;
  top: 2rem;
  right: 3rem;
  background: #0A1128;
  color: #FFFFFF;
  border: none;
  display: none;
  pointer-events: all;
}

.c0 >svg {
  cursor: pointer;
  padding-top: 2px;
  padding-left: 6px;
  padding-right: 6px;
}

.c5 {
  color: inherit;
  display: flex;
  text-decoration: none;
  align-items: center;
  padding: 1rem;
}

.c5 >img {
  max-height: 2.5rem;
}

.c6 {
  color: #FFFFFF;
  display: flex;
  flex-flow: row wrap;
}

.c7 {
  color: #0A1128;
  display: block;
  text-decoration: none;
  font-size: 1.6rem;
  padding: 1.6rem;
  position: relative;
}

.c7::after {
  content: "";
  position: absolute;
  bottom: 0.8rem;
  left: 50%;
  width: 0;
  height: 0.2rem;
  background-color: #dc143c;
  transition: all 300ms ease-in-out;
}

.c7:hover::after {
  left: 25%;
  width: 50%;
}

@media (max-width:768px) {
  .c1 {
    height: 100vh;
    visibility: hidden;
    opacity: 0;
  }

  .c1 >.sc-bdnyFh {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
  }

  .c1 .c3 {
    padding-bottom: 3.2rem;
    display: flex;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c2 {
    flex-flow: column nowrap;
    justify-content: flex-start;
    align-items: center;
    text-align: center;
    min-height: 100vh;
    height: 100%;
    overflow-y: auto;
    padding: 4.8rem 0;
    cursor: pointer;
  }
}

@media (max-width:768px) {
  .c0 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

@media (max-width:768px) {
  .c6 {
    flex-flow: column wrap;
    align-content: center;
  }
}

<div>
  <button
    aria-label="Open/close menu"
    class="c0"
  >
    <svg
      aria-label="Open menu"
      class="lucide lucide-menu"
      fill="none"
      height="32"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="4"
        x2="20"
        y1="12"
        y2="12"
      />
      <line
        x1="4"
        x2="20"
        y1="6"
        y2="6"
      />
      <line
        x1="4"
        x2="20"
        y1="18"
        y2="18"
      />
    </svg>
  </button>
  <div
    aria-label="wrap"
    class="c1"
  >
    <div
      class="c2"
    >
      <h1
        class="c3 c4"
      >
        <a
          class="c5"
          href="#target"
        >
          Logo
        </a>
      </h1>
      <nav
        aria-label="Main menu"
        class="c6"
      >
        <a
          class="c7"
          href="#target1"
          target="_self"
        >
          Link 1
        </a>
        <a
          class="c7"
          href="#target2"
          target="_self"
        >
          Link 2
        </a>
        <a
          class="c7"
          href="#target3"
          target="_self"
        >
          Link 3
        </a>
        <a
          class="c7"
          href="#target4"
          target="_self"
        >
          Link 4
        </a>
        <a
          class="c7"
          href="#target5"
          target="_self"
        >
          Link 5
        </a>
        <a
          class="c7"
          href="#target6"
          target="_self"
        >
          Link 6
        </a>
        <a
          class="c7"
          href="#target7"
          target="_self"
        >
          Link 7
        </a>
        <a
          class="c7"
          href="#target8"
          target="_self"
        >
          Link 8
        </a>
        <a
          class="c7"
          href="#target9"
          target="_self"
        >
          Link 9
        </a>
        <a
          class="c7"
          href="#target10"
          target="_self"
        >
          Link 10
        </a>
      </nav>
    </div>
  </div>
</div>
`;
